# MICCAI2015

./: README.md
code/: README.md
code/postprocessing/: computeDetectionPerformance.m  computePRData.m  disptable.m  filelist.m  plotPRData.m
code/preprocessing/: README.md  computeDistTrans.m  distanceTransform.m  makeGTImages.m  readGTLocations.m  writeGTLocations.m
code/src/: COPYRIGHT
code/src/apps/celldetection-class/: AppContextCellDetClass.h  CMakeLists.txt  CellDetUtils.h  CellDetectorClass.cpp  CellDetectorClass.h  DataLoaderCellDetClass.cpp  DataLoaderCellDetClass.h  main.cpp
code/src/apps/celldetection-regr/: AppContextCellDetRegr.h  CMakeLists.txt  CellDetUtils.h  CellDetectorRegr.cpp  CellDetectorRegr.h  DataLoaderCellDetRegr.cpp  DataLoaderCellDetRegr.h  main.cpp
code/src/rflib/: AppContext.cpp  AppContext.h  FeatureGeneratorRGBImage.cpp  FeatureGeneratorRGBImage.h  LabelMLClass.cpp  LabelMLClass.h  LabelMLRegr.cpp  LabelMLRegr.h  LeafNodeStatisticsMLClass.cpp  LeafNodeStatisticsMLClass.h  LeafNodeStatisticsMLRegr.cpp  LeafNodeStatisticsMLRegr.h  SampleImgPatch.h  SplitEvaluatorMLClass.cpp  SplitEvaluatorMLClass.h  SplitEvaluatorMLRegr.cpp  SplitEvaluatorMLRegr.h  SplitFunctionImgPatch.cpp  SplitFunctionImgPatch.h
code/src/rflib/core/: DataSet.cpp  DataSet.h  Interfaces.h  LabelledSample.cpp  LabelledSample.h  Node.cpp  Node.h  RFCoreParameters.h  RandomForest.cpp  RandomForest.h  RandomTree.cpp  RandomTree.h  Utilities.h  icgrf.h
data/BM_GRAZ/annotations/: BM_GRAZ_HE_0001_01.txt  BM_GRAZ_HE_0001_02.txt  BM_GRAZ_HE_0002_01.txt  BM_GRAZ_HE_0002_02.txt  BM_GRAZ_HE_0003_01.txt  BM_GRAZ_HE_0003_02.txt  BM_GRAZ_HE_0004_01.txt  BM_GRAZ_HE_0006_01.txt  BM_GRAZ_HE_0007_01.txt  BM_GRAZ_HE_0008_01.txt  BM_GRAZ_HE_0020_01.txt
demo/: README.md
demo/class/: config.txt  evaluate.m  run.sh
demo/regr/: config.txt  evaluate.m  run.sh
